[workspace]
resolver = "2"
default-members = [
    "bin/arcade",
]
members = [
    "bin/*",
    "lib/*",
    "xtask"
]

[workspace.dependencies]
avian3d = "0.1"
bevy = "0.14"

# enable this to make the release build slower but more optimized
#[profile.release]
#opt-level = 'z'
#lto = true
#codegen-units = 1
#
#[profile.bench]
#lto = true
