[workspace]
resolver = "2"
default-members = [
    "bin/arcade",
    "lib/building",
]
members = [
    "bin/*",
    "lib/*",
    "xtask"
]

[workspace.dependencies]
avian3d = {version = "0.1", features = ["simd"]}
bevy = {version = "0.14.2", features = ["embedded_watcher"]}

# enable this to make the release build slower but more optimized
#[profile.release]
#opt-level = 'z'
#lto = true
#codegen-units = 1
#
#[profile.bench]
#lto = true
